@@ -34,6 +34,16 @@ public class RowKeyTableTest {
 		// 获取列
 		final Map<Integer, Integer> column = table.getColumn(6);
 		Assertions.assertEquals(1, column.size());
-		Assertions.assertEquals(new Integer(4), column.get(1));
+		Assertions.assertEquals(Integer.valueOf(4), column.get(1));
+	}
+
+	@Test
+	public void issue3135Test() {
+		final Table<Integer, Integer, Integer> table = new RowKeyTable<>();
+		table.put(1, 2, 3);
+		table.put(1, 6, 4);
+
+		Assertions.assertNull(table.getRow(2));
+		Assertions.assertFalse(table.contains(2, 3));
 	}
 }
